Bug 237770: Mozilla fails to ignore 'float' property even though 'position: absolute' is set. r=dbaron, sr=bzbarsky.